--- a/ObligatorioTTec/ObligatorioTTec/MainPage.xaml
+++ b/ObligatorioTTec/ObligatorioTTec/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ObligatorioTTec.MainPage">
+             x:Class="ObligatorioTTec.MainPage"
+             BackgroundImageSource="C:\Users\agust\OneDrive\Documents\GitHub\TallerTecOb\ObligatorioTTec\ObligatorioTTec\Images\Cinebg.jpg">
 
     <StackLayout>
         <Button
